# charly-vm

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .rgignore  CMakeLists.txt  Makefile  Readme.md  build.sh  build_release.sh  clean.sh  debug.sh  debugp.sh  format.sh  install.sh  notes.md  release.sh  ruby-float-code.c  tests.sh  tests_release.sh  todos.md
algo-testing/: lvar-rewrite.js
benchmark/: gc-stress-test.ch  string-concat.ch
benchmarks/: short-string-optimization.ch
docs/: frames.md  garbage-collector.md  instructions.md
examples/: closures.ch  debug.ch  exceptions.ch  functions.ch  generators.ch  graph.ch  ifelse.ch  interpreter.ch  intervals.ch  k-nearest-neighbours.ch  lextest.ch  lib.ch  lvar-alloc.ch  mandelbrot.ch  parsertest.ch  prototype-test.ch  quadratic-equations.ch  recursive-fibonacci.ch  recursive-stair-problem.ch  runtime-profiler.ch  scratch.ch  sfml.ch  simple-x86_32-compiler.ch  syntax-test.ch  test-require-lib.ch  test-require.ch  test.ch  tickers.ch  tree-successor.ch  while.ch  yield-summation.ch  yield.ch
experiments/: block-unwind-prototype.py  compile-time-assembler.cpp  cooperative_threads.cpp  cooperative_threads_refactored.cpp  custom-stream.cpp  future-disassembly-view.txt  nan-boxing.cpp  small-locks.cpp  small-tagged-double.cpp  small_locks.cpp  state-notifier-refactored.cpp  state-notifier.cpp
feature-ideas/: argument-spread.ch  default-arguments.ch  do-loops.ch  import-system.ch  match-statement.ch  (+6 more)
src/: CMakeLists.txt  block.cpp  block.h  buffer.c  buffer.cpp  buffer.h  charly.h  cli.cpp  cli.h  cliflags.cpp  codegenerator.cpp  constants.h  context.cpp  context.h  defines.h  environment.c  environment.h  exception.h  frame.c  frame.h  gc.cpp  gc.h  hash.h  instruction.h  internals.cpp  internals.h  lexer.cpp  main.c  main.cpp  managedcontext.cpp  opcode.h  operators.cpp  operators.h  ops.h  parser.cpp  runflags.h  scope.cpp  scope.h  sourcefile.cpp  status.h  (+10 more)
src/charly/: charly.cpp  handle.cpp  taggedvalue.cpp  value.cpp
src/charly/core/: compiler.cpp  compiler.h
src/charly/core/compiler/: ast.cpp  ast.h  astpass.h  codegenerator.cpp  codegenerator.h  compiler.cpp  compiler.h  diagnostic.cpp  diagnostic.h  error.h  lexer.cpp  lexer.h  localvars.cpp  localvars.h  location.cpp  location.h  parser.cpp  parser.h  pass.h  passmacros.h  token.h
src/charly/core/compiler/ir/: assembler.cpp  assembler.h  builder.cpp  builder.h  builtin.h  bytecode.h  functioninfo.h  ir.cpp  ir.h  valuelocation.h
src/charly/core/compiler/passes/: class_constructor_check.cpp  class_constructor_check.h  code_elimination.cpp  code_elimination.h  constant_folding_pass.cpp  constant_folding_pass.h  desugar_pass.cpp  desugar_pass.h  dump.cpp  dump.h  duplicates_check.cpp  duplicates_check.h  grammar_validation_check.cpp  grammar_validation_check.h  local_allocator_pass.cpp  local_allocator_pass.h  node_specialization_pass.cpp  node_specialization_pass.h  repl_prepare_pass.cpp  repl_prepare_pass.h  reserved_identifiers_check.cpp  reserved_identifiers_check.h  semantic.cpp  semantic.h  variable_analyzer_pass.cpp  variable_analyzer_pass.h
src/charly/core/runtime/: allocator.cpp  allocator.h  compiled_module.cpp  compiled_module.h  fiber.cpp  fiber.h  framecontext.h  function.h  gc.cpp  gc.h  gcworker.cpp  gcworker.h  heap.cpp  heap.h  heapvalue.cpp  heapvalue.h  interpreter.cpp  interpreter.h  processor.cpp  processor.h  runtime.cpp  runtime.h  scheduler.cpp  scheduler.h  thread.cpp  thread.h  vm_frame.cpp  vm_frame.h  watchdog.cpp  watchdog.h  worker.cpp  worker.h
src/charly/core/runtime/builtins/: builtin.h  core.cpp  core.h  future.cpp  future.h  list.cpp  list.h  readline.cpp  readline.h  timer.cpp  timer.h
src/charly/stdlib/: boot.ch  repl.ch
src/charly/stdlib/libs/: unittest.ch
src/charly/utils/: allocator.cpp  argumentparser.cpp  argumentparser.h  buffer.cpp  colorwriter.h  lock.cpp  macros.h  memoryblock.cpp  stringindent.h
src/compiler/: assembler.cpp  block.cpp  codegenerator.cpp  compiler-manager.cpp  compiler.cpp  disassembler.cpp  instructionblock.cpp  irscope.cpp  lexer.cpp  lvar-alloc.cpp  lvar-rewrite.cpp  normalizer.cpp  parser.cpp
src/headers/: ast.h  block.h  buffer.h  charly.h  cli.h  codegenerator.h  context.h  defines.h  exception.h  frame.h  gc.h  internals.h  irinfo.h  label.h  lexer.h  location.h  managedcontext.h  opcode.h  operators.h  parser.h  runflags.h  sourcefile.h  status.h  symboltable.h  token.h  value.h  vm.h
src/stdlib/: prelude.ch
src/stdlib/libs/: channel.ch  circular_buffer.ch  defer.ch  error.ch  heap.ch  math.ch  path.ch  promise.ch  queue.ch  stringbuffer.ch  sync.ch  time.ch  unittest.ch
src/stdlib/libs/unittest/: context.ch  lib.ch  node.ch  results.ch  visitor.ch
src/stdlib/primitives/: array.ch  boolean.ch  class.ch  frame.ch  function.ch  generator.ch  null.ch  number.ch  object.ch  string.ch  value.ch
src/stdlib/primitives/libs/string/: buffer.ch
src/vm/: gc.cpp  internals.cpp  managedcontext.cpp  operators.cpp  value.cpp  vm.cpp
src/vm/libs/: math.def  math.h
src/vm/libs/buffer/: buffer.cpp  buffer.def  buffer.h
src/vm/libs/defer/: defer.cpp  defer.def  defer.h
src/vm/libs/math/: math.cpp  math.def  math.h
src/vm/libs/primitives/: array.cpp  array.def  array.h  object.cpp  object.def  object.h  string.cpp  string.def  string.h
src/vm/libs/primitives/array/: array.cpp  array.def  array.h
src/vm/libs/primitives/function/: function.cpp  function.def  function.h
src/vm/libs/primitives/number/: number.cpp  number.def  number.h
src/vm/libs/primitives/object/: object.cpp  object.def  object.h
src/vm/libs/primitives/string/: string.cpp  string.def  string.h
src/vm/libs/primitives/value/: value.cpp  value.def  value.h
src/vm/libs/stringbuffer/: stringbuffer.cpp  stringbuffer.def  stringbuffer.h
src/vm/libs/sync/: sync.cpp  sync.def  sync.h
src/vm/libs/time/: time.cpp  time.def  time.h
src/vm/primitives/: array.cpp  catchtable.cpp  cfunction.cpp  class.cpp  container.cpp  cpointer.cpp  frame.cpp  function.cpp  header.cpp  object.cpp  string.cpp
(+184 files in other folders)
